[gd_scene load_steps=7 format=3 uid="uid://dhnmaakqdptlo"]

[ext_resource type="PackedScene" uid="uid://ck6flabpfj65y" path="res://Playable Shape Scene/playable_shape.tscn" id="1_1w1ic"]
[ext_resource type="Script" path="res://Main Scene/main.gd" id="1_yesy6"]
[ext_resource type="PackedScene" uid="uid://3euynf7d8fyy" path="res://Node Scene/Grid_node.tscn" id="2_vuyjw"]
[ext_resource type="Script" path="res://Main Scene/grid_pieces.gd" id="4_nvdvr"]
[ext_resource type="Script" path="res://Main Scene/playable_pieces.gd" id="5_jxtif"]
[ext_resource type="Script" path="res://Main Scene/solution.gd" id="6_0c0vp"]

[node name="Main" type="Node2D"]
script = ExtResource("1_yesy6")

[node name="Grid_Pieces" type="Node2D" parent="."]
script = ExtResource("4_nvdvr")
new_node = ExtResource("2_vuyjw")

[node name="playable_pieces" type="Node2D" parent="."]
script = ExtResource("5_jxtif")
new_shape = ExtResource("1_1w1ic")

[node name="Solution" type="Node2D" parent="."]
script = ExtResource("6_0c0vp")

[node name="Solution_Grid" type="Node2D" parent="Solution"]

[node name="Solution_Shapes" type="Node2D" parent="Solution"]

[connection signal="init_grid" from="." to="Grid_Pieces" method="_on_main_init_grid"]
[connection signal="init_shapes" from="." to="playable_pieces" method="_on_main_init_shapes"]
[connection signal="init_solution" from="." to="Solution" method="_on_main_init_solution"]
[connection signal="grid_done" from="Grid_Pieces" to="." method="_on_grid_pieces_grid_done"]
[connection signal="create_pieces" from="Solution" to="playable_pieces" method="_on_solution_create_pieces"]
