[gd_scene load_steps=3 format=3 uid="uid://dhnmaakqdptlo"]

[ext_resource type="PackedScene" uid="uid://ck6flabpfj65y" path="res://shape_test.tscn" id="1_1w1ic"]
[ext_resource type="Script" path="res://main.gd" id="1_yesy6"]

[node name="Main" type="Node"]
script = ExtResource("1_yesy6")

[node name="shape_1" parent="." instance=ExtResource("1_1w1ic")]

[node name="start_position_1" type="Marker2D" parent="."]
position = Vector2(300, 300)
